Fix more contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -659,7 +659,7 @@ border: 1px solid green;
 
 /* Add styles to the submit button */
 .submit {
-background: #2196F3;
+background: #085696;
 margin: 0 auto;
 outline: 0;
 color: white;
@@ -680,7 +680,7 @@ margin-top: 10px;
 }
 
 .reset {
-  background: #d84a69;
+  background: #A4233F;
   margin: 0 auto;
   outline: 0;
   color: white;
